Add Resend-compatible hosted templates
